app/assets/stylesheets/shared.scss
html,
body {
  margin: 0;
  padding: 0;
  min-width: 100%;
  width: 100%;
  max-width: 100%;
  min-height: 100%;
  height: 100%;
  max-height: 100%;
}

html {
  overflow: auto;
}

body {
  font-family: $main-font;
  background-color: $gray-color;

  background-image: url(http://res.cloudinary.com/nasdaily/image/upload/v1499019749/bg_pattern_pdqcu0_a7zk4k.svg);
  background-repeat: repeat;
  background-position: top;
  background-size: 60%;

  &.shop {
    overflow: auto;
    background-image: url(http://res.cloudinary.com/nasdaily/image/upload/v1501383337/Nas_shirt_bg_v13rv6_1_w96wwj.png);
    background-repeat: no-repeat;
    background-position: center 40%;
    background-size: cover;
  }

  &.with-overlay, &.ReactModal__Body--open {
    overflow: hidden;
  }
}

button, a {
  outline-color: $yellow-color;
  text-decoration: none;
  color: inherit;
  cursor: pointer;
  font-family: $main-font;
}

input {
  outline-color: $yellow-color;
}

.content {
  min-height: calc(100vh - #{$footer-height});
}

@media #{$large-up} {
  body.shop-tab {
    background-position: 0 0;
  }
}

@media #{$small-only} {
  body {
    background-size: 75%;
  }

  .content {
    height: 100%;
  }
}

